# poetry-diagrams

./: README.md  poetry-diagrams.cabal
src/: PoetryDiagrams.hs
src/PoetryDiagrams/: Internal.hs
test/: PoetryDiagramsSpec.hs
