name:                   poetry-diagrams
version:                0.1.0.0
author:                 Misha Wolfson <mywolfson@gmail.com>
maintainer:             Misha Wolfson <mywolfson@gmail.com>
license:                GPL-2
license-file:           COPYING
synopsis:               Generate diagrams of the vocal patterns of poetry.
description:            poetry-diagrams is an attempt by me to learn Haskell
                        while making something interesting and beautiful. It
                        takes properties from the sound files of poetry
                        recordings and use that information to make graphics.
cabal-version:          >= 1.10
category:               Graphics
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      PoetryDiagrams
  other-modules:        PoetryDiagrams.Internal
  build-depends:        base >= 4 && < 5

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       src
                      , test
  ghc-options:          -Wall
  main-is:              Spec.hs
  build-depends:        base
                      , hspec

source-repository head
  type:                 git
--  location:
